k8s/overlays/prod-canary-vs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-demo-prod-vs
  labels:
    istio-injection: enabled
