k8s/overlays/prod-canary-vs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-demo
spec:
  template:
    spec:
      containers:
        - name: argo-demo
          image: particule/simplecolorapi:2.0
          imagePullPolicy: IfNotPresent
