k8s/overlays/prod-canary-vs/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: argo-demo
  annotations:
    ingress.kubernetes.io/service-upstream: 'true'
